# weather-mcp-server

./: .gitignore  README.md  pyproject.toml
src/weather_mcp/: __init__.py  server.py
tests/: test_server.py
